# PyBuildInfo

./: .gitignore  LICENSE.md  README.md  TODO.md  pybuildinfo.pyproj  pybuildinfo.sln  setup.py  testrun.py
example/: CMakeLists.txt  main.cpp
example_cmake/: example.bat  example.sh  main.cpp
example_rust/: .gitignore  Cargo.toml  build.rs  buildinfo_template.rs
example_rust/src/: buildinfo.rs  main.rs
pybuildinfo/: __init__.py  cmd.py  resource.py  run.py  timer.py
pybuildinfo/resource/: __init__.py  default.hpp
pybuildinfo/resource_data/: BuildInfo.ini  example.hpp
pybuildinfo/scm/: __init__.py  abs.py  git.py
pybuildinfo/templating/: abs.py  default.py
pybuildinfo/vcs/: __init__.py  git.py  hg.py  undefined.py
tests/: test_resource.py  test_vcs_git.py  test_vcs_hg.py  test_vcs_undefined.py
tests/resource/: __init__.py
